--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,21 +7,33 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: npm-dependency-cache-{{ checksum "package.json" }}
+          key: yarn-dependency-cache-{{ checksum "yarn.lock" }}
       - run:
-          name: npm-install
-          command: npm install
+          name: yarn install
+          command: yarn install
+      - run:
+          name: Update
+          command: |
+            sudo apt-get update -y
+      - run:
+          name: Install Chrome headless dependencies
+          command: |
+            sudo apt-get install -yq gconf-service libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 \
+            libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 \
+            libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 \
+            libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 \
+            ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget --fix-missing
       - save_cache:
-          key: npm-dependency-cache-{{ checksum "package.json" }}
+          key: yarn-dependency-cache-{{ checksum "yarn.json" }}
           paths:
-            - ./node_modules
+            - ~/.cache/yarn
       - run:
           name: build
-          command: npm run build
+          command: yarn build
       - run:
           name: test
           command: |
-            npm test
+            yarn test
 workflows:
   version: 2
   build:
